2009-12-18  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_reporting.php: Fixed SLA calculation. Was not working.

	* include/functions_fsgraph.php: Fixed bug #2913813.

	* include/functions_config.php, include/config_process.php,
	  include/fgraph.php, include/functions_db.php,
	  operation/events/export_csv.php, operation/agentes/export_csv.php,
	  operation/agentes/datos_agente.php, godmode/menu.ph: Added history
	  database support.

2009-12-17  Miguel de Dios  <miguel.dedios@artica.es>

	* pandora_console/godmode/reporting/graph_builder.php: fix blank row when
	redraw graph in builder, and fix the empty column agent name in table of
	modules.
	Fixes: 2916194

2009-12-17  Miguel de Dios  <miguel.dedios@artica.es>

	* pandora_console/extensions/update_manager/load_updatemanager.php: add more
	info (Pandora version and build) to statistics in update process.

2009-12-16  Raul Mateos  <raulofpandora@gmail.com>

	* include/config_process.php, DEBIAN/make_deb_package.sh: Preparing
	release	changing version to final.

2009-12-16  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/modules/manage_network_components.php: fix re-duplicate modules
	now only generate one copy.
	Fixes: 2915470

2009-12-16  Miguel de Dios  <miguel.dedios@artica.es>

	* include/fgraph.php: fix print image error as tag <image> instead content
	file when there is error in data string. And add new type of graph, error
	graph.
	Fixes: 2908174

2009-12-16  Miguel de Dios  <miguel.dedios@artica.es>

	* ChangeLog: fix the days in the last dates.

2009-12-16  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_servers.php: tiny fix (a zero division) the tactical
	view when start with a empty Pandora. 
	
2009-12-15  Miguel de Dios  <miguel.dedios@artica.es>

	* include/fgraph.php: fix in the function "grafico_modulo_boolean" for
	show correct graph, and clean source code.
	* include/functions_extensions.php: change include_once to require_once for
	more security.
	Fixes: 2883786
